--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="navbar">
 <nav><br>
 <ul>
-<li><a href="one.html">Home</a></li>
+<li><a href="index.html">Home</a></li>
 <li><a href="account.html">Account</a></li>
 <li><a href="content.html">About</a></li>
 </ul>
@@ -28,7 +28,7 @@
 <br>
 <br>
 <br>
-<img src="C:\Users\Hp\OneDrive\Desktop\WD-II\html.jpeg" width="925px">
+<img src="C:\Users\Hp\OneDrive\Desktop\WD-II\html.jpeg" width="925px"></img>
 </div>
 </div>
 </body>
