--- a/about_us.html
+++ b/about_us.html
@@ -10,7 +10,7 @@
 <nav>
 <br>
 <ul>
-<li><a href="one.html">Home</a></li>
+<li><a href="index.html">Home</a></li>
 <li><a href="account.html">Account</a></li>
 <li><a href="about_us.html">About</a></li>
 </ul>
