--- a/content.html
+++ b/content.html
@@ -9,7 +9,7 @@
 <div class="navbar">
 <nav><br>
 <ul>
-<li><a href="one.html">Home</a></li>
+<li><a href="index.html">Home</a></li>
 <li><a href="account.html">Account</a></li>
 <li><a href="about_us.html">About</a></li>
 </ul>
