--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 <br>
 <br>
 <br>
-<img src="C:\Users\Hp\OneDrive\Desktop\WD-II\html.jpeg" width="925px"></img>
+<img src="C:\Users\Hp\OneDrive\Desktop\WD-II\html.jpeg" width="925px" alt="Description
+"></img>
 </div>
 </div>
 </body>
