--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 <br>
 <br>
 <br>
-<img src="C:\Users\Hp\OneDrive\Desktop\WD-II\html.jpeg" width="925px" alt="Description
-"></img>
+<img src="C:\Users\Hp\OneDrive\Desktop\WD-II\html.jpeg" width="925px" alt="Description"></img>
 </div>
 </div>
 </body>
