--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <br>
 <br>
 <br>
-<img src="Desktop\WD-II\html.jpeg" width="925px" alt="Description"></img>
+<img src="html.jpeg" width="925px" alt="Description"></img>
 </div>
 </div>
 </body>
