--- a/account.html
+++ b/account.html
@@ -34,7 +34,7 @@
 <input type="submit" value="login"><br>
 <div class="register">
 <br>
-Not a member? <a href="#"> Register </a>
+Not a member? <a href="register.html"> Register </a>
 </div>
 </div>
 
