--- a/register.html
+++ b/register.html
@@ -31,9 +31,9 @@
 <label>Password</label>
 </div>
 <div class="text-field">
-<input type="text" required>
+<input type="password" required>
 <span></span>
-<label>Username</label>
+<label>Confirm Password </label>
 </div>
 
 <input type="submit" value="Register"><br>
