--- a/content.html
+++ b/content.html
@@ -4,6 +4,12 @@
 <title>CONTENT</title>
 <link rel="stylesheet" href="styles.css">
 </head>
+ <style>
+a:hover {
+  background-color: yellow;
+  font-size: 18px;
+  color:red;
+}
 <body>
 <div class="container">
 <div class="navbar">
