--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <ul>
 <li><a href="index.html">Home</a></li>
 <li><a href="account.html">Account</a></li>
-<li><a href="content.html">About</a></li>
+<li><a href="about_us.html">About</a></li>
 </ul>
 </nav>
 </div>
