--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 </head>
 
 <body>
+  <button onclick="Dialog_boxes()">Click Me</button>
+
+    <script>
+        function Dialog_boxes() {
+            // Alert Box
+            alert("Welcome to our website!");
+          </script>
 <div class="container">
 <div class="navbar">
 <nav><br>
