--- a/index.html
+++ b/index.html
@@ -5,15 +5,7 @@
 <title>HOME</title>
 <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-  <button onclick="Dialog_boxes()">Click Me</button>
-
-    <script>
-        function Dialog_boxes() {
-            // Alert Box
-            alert("Welcome to our website!");
-          </script>
 <div class="container">
 <div class="navbar">
 <nav><br>
@@ -30,7 +22,7 @@
 <h1>Fundamentals First !!!</h1>
 <p>Learn the essentials of web design <br>
 - simple , effective, and creative .<br></p>
-<a href="content.html" class="btn">Start Learning &#10137</a>
+<a href="content.html" class="btn" onclick="Dialog_boxes()">Start Learning &#10137</a>
 </div>
 <div class="col-2"><br>
 <br>
@@ -39,5 +31,10 @@
 <img src="html.jpeg" width="925px" alt="Description"></img>
 </div>
 </div>
+  <script>
+        function Dialog_boxes() {
+            // Alert Box
+            alert("Welcome to our website!");
+          </script>
 </body>
 </html>
