--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <h1>Fundamentals First !!!</h1>
 <p>Learn the essentials of web design <br>
 - simple , effective, and creative .<br></p>
-<a href="content.html" class="btn" onclick="Dialog_boxes()">Start Learning &#10137</a>
+<a href="content.html" class="btn" >Start Learning &#10137</a>
 </div>
 <div class="col-2"><br>
 <br>
@@ -31,10 +31,5 @@
 <img src="html.jpeg" width="925px" alt="Description"></img>
 </div>
 </div>
-  <script>
-        function Dialog_boxes() {
-            // Alert Box
-            alert("Welcome to our website!");
-          </script>
 </body>
 </html>
